# move_base_sequence_of_goals

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: goals.yaml
include/: sequence_of_goals.h
launch/: sequence_of_goals_py.launch
nodes/: sequence_of_goals  sequence_of_goals_node
